<resources>
    <string name="app_name">MobileProgramingWeek2</string>
    <string name="weight_of_the_package">Weight of the Package</string>
    <string name="ouncesLBL">(in ounces)</string>
    <string name="baseLBL">Base Cost:</string>
    <string name="addCostLBL">Added Cost:</string>
    <string name="totalLBL">Total Shipping Cost:</string>
    <string name="default_dollar">$0.00</string>
    <string name="zero">0</string>
    <string name="book">book</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="pencil">pencil</string>
    <string name="eraser">eraser</string>
</resources>
